Use a queue for removing players